[tool.poetry]
name = "asciize"
version = "0.0.1"
description = "Asciize"
authors = ["Tom Willis <sett.and.hive+asciize@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sett-and-hive/asciize"
repository = "https://github.com/sett-and-hive/asciize"
documentation = "https://asciize.readthedocs.io"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
Changelog = "https://github.com/sett.and.hive/asciize/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.3.2"}
darglint = ">=1.8.1"
mccabe = ">=0.7.0,<0.8.0"
flake8 = "=5.0.0"
flake8-bandit = ">=4.0.0"
flake8-bugbear = ">=22.0.0"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
mypy = ">=0.982"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pytest-randomly = "^3.8.0"
reorder-python-imports = "^3.0.0"

[tool.poetry.scripts]
asciize = "asciize.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["asciize"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 88

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
#disallow_untyped_operators = false

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "tests/*.py: S101"
    # There are multiple `assert`s in tests, we allow them:
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
